--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -4285,7 +4285,7 @@ ol.link-bibliography-list-compact > li::before {
 /*= /static/404 =*/
 /*=-------------=*/
 
-body.static-404 figure {
+body.page-static-404 figure {
 	background-color: var(--GW-body-background-color);
 }
 
@@ -4326,7 +4326,7 @@ body.static-404 figure {
 
 /*  This is for the pictures of mead bottles next to the reviews.
     */
-body.review-mead p > img {
+body.page-review-mead p > img {
     float: right;
     max-height: 8em;
     width: auto;
@@ -4339,7 +4339,7 @@ body.review-mead p > img {
 /*= /hafu =*/
 /*=-------=*/
 
-body.hafu .table-wrapper#hafu-list-table td:last-of-type {
+body.page-hafu .table-wrapper#hafu-list-table td:last-of-type {
     width: 50%;
 }
 
@@ -4347,12 +4347,12 @@ body.hafu .table-wrapper#hafu-list-table td:last-of-type {
 /*= /dnm-arrest =*/
 /*=--------------=*/
 
-body.dnm-arrest .table-wrapper#data-table td:nth-of-type(6),
-body.dnm-arrest .table-wrapper#data-table td:nth-of-type(12),
-body.dnm-arrest .table-wrapper#data-table td:nth-of-type(13) {
+body.page-dnm-arrest .table-wrapper#data-table td:nth-of-type(6),
+body.page-dnm-arrest .table-wrapper#data-table td:nth-of-type(12),
+body.page-dnm-arrest .table-wrapper#data-table td:nth-of-type(13) {
     white-space: nowrap;
 }
-body.dnm-arrest .table-wrapper#data-table td:last-of-type {
+body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     width: 20%;
 }
 
