--- a/template/default.html
+++ b/template/default.html
@@ -89,7 +89,7 @@
   </head>
 
   <!-- Skip fancy css like drop-caps on index pages -->
-  $if(index)$<body class="$safeURL$">$else$<body class="$safeURL$ $cssExtension$">$endif$
+  $if(index)$<body class="page-$safeURL$">$else$<body class="page-$safeURL$ $cssExtension$">$endif$
 
     <!-- SSI: Inlined asset links -->
     <!-- INLINED-ASSET-LINKS-BEGIN-->
