Update default.html template with dark mode favicon links

--- a/template/default.html
+++ b/template/default.html
@@ -72,8 +72,10 @@
     <title>$titlePlain$ · Gwern.net</title>
     $endif$
 
-    <link rel="icon" type="image/png" href="/static/img/logo/logo-favicon-small.png">
-    <link rel="apple-touch-icon" type="image/png" href="/static/img/logo/logo-favicon-appletouch.png">
+    <link id="favicon" rel="icon" type="image/png" href="/static/img/logo/logo-favicon-small.png">
+    <link id="favicon-dark" rel="icon" type="image/png" href="/static/img/logo/logo-favicon-small-dark.png" media="all and (prefers-color-scheme: dark)">
+    <link id="favicon-apple-touch" rel="apple-touch-icon" type="image/png" href="/static/img/logo/logo-favicon-appletouch.png">
+    <link id="favicon-apple-touch-dark" rel="apple-touch-icon" type="image/png" href="/static/img/logo/logo-favicon-appletouch-dark.png" media="all and (prefers-color-scheme: dark)">
 
     <!-- CSS for JS-disabled users: ensure that NoScripters know what they are missing even if they jump to a section & miss the warning at top/bottom. --> <noscript> <style>#markdownBody #noscript-warning-header { position: fixed; /* sticky */
                                          top: 6px; /* at top */
