--- a/template/default.html
+++ b/template/default.html
@@ -103,7 +103,7 @@
     <main>
       <nav id="sidebar">
         <a class="logo" rel="home me contents" href="/index" title="Homepage: categorized list of articles index">
-          <svg viewBox="0 0 64 75" alt="Gwern.net Site Logo (a Fraktur blackletter capital G)"><use href="/static/img/logo/logo-smooth.svg#logo" /></svg>
+          <svg class="logo-image" viewBox="0 0 64 75" alt="Gwern.net Site Logo (a Fraktur blackletter capital G)"><use href="/static/img/logo/logo-smooth.svg#logo" /></svg>
         </a>
         <div class="sidebar-links">
         <a class="icon-not site  link-page link-annotated" href="/about"                 title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
