--- a/css/reader-mode-initial.css
+++ b/css/reader-mode-initial.css
@@ -1,4 +1,4 @@
-body.reader-mode-active #sidebar .sidebar-links, 
+body.reader-mode-active #sidebar .sidebar-links,
 body.reader-mode-active #page-metadata .page-status,
 body.reader-mode-active #page-metadata .page-confidence,
 body.reader-mode-active #page-metadata .page-importance,
@@ -7,6 +7,7 @@ body.reader-mode-active #page-metadata .link-bibliography,
 body.reader-mode-active #page-metadata .similars,
 body.reader-mode-active #page-metadata .page-date-range::after,
 body.reader-mode-active #TOC ul li::before,
+body.reader-mode-active #TOC .toc-collapse-toggle-button,
 body.reader-mode-active #sidenote-column-left,
 body.reader-mode-active #sidenote-column-right,
 body.reader-mode-active #navigation,
