--- a/css/initial.css
+++ b/css/initial.css
@@ -2127,3 +2127,31 @@ body.special-halloween-dark #sidebar svg.logo-image {
 body.index.special-halloween-dark #sidebar a:hover {
 	color: var(--GW-blood-red);
 }
+
+/*=-----------=*/
+/*= Christmas =*/
+/*=-----------=*/
+
+@media all and (max-width: 649px) {
+	body.special-christmas #sidebar span.logo-image img {
+		width: 133%;
+		position: relative;
+		left: -15%; top: -15%;
+	}
+}
+@media all and (min-width: 650px) {
+	@media all and (max-width: 1179px) {
+		body.special-christmas #sidebar span.logo-image img {
+			width: 150%;
+			position: relative;
+			left: -30%; top: -15%;
+		}
+	}
+	@media all and (min-width: 1180px) {
+		body.special-christmas #sidebar span.logo-image img {
+			width: 125%;
+			position: relative;
+			left: -10%; top: -10%;
+		}
+	}
+}
