--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2306,18 +2306,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -3159,7 +3159,7 @@ del {
 		float: left;
 		display: block;
 		height: 9.4em;
-		margin: -0.15em 0 0 -0.85em;
+		margin: -0.25em -0.05em -0.85em -0.85em;
 	}
 }
 
@@ -5222,14 +5222,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5362,7 +5362,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5817,14 +5817,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6727,7 +6727,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1697940768#question');
+    background-image: url('/static/img/icon/icons.svg?v=1698021605#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7293,7 +7293,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1697940768#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1698021605#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7368,7 +7368,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 
 .markdownBody span.block-context-highlighted:empty::before {
 	content: "";
-	background-image: url('/static/img/icon/icons.svg?v=1697940768#hand-point-right-regular');
+	background-image: url('/static/img/icon/icons.svg?v=1698021605#hand-point-right-regular');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
