--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2306,18 +2306,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1697940768#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1697940768#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1697940768#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1697940768#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -2577,7 +2577,7 @@ code {
     border: 1px solid var(--GW-code-element-border-color);
     background-color: var(--background-color);
 
-/*	This is currently broken in Safari. Since it’s not important enough to 
+/*	This is currently broken in Safari. Since it’s not important enough to
 	figure out a way to scope it to only non-Safari browsers, I’m disabling it
 	for now. This should be revisited in a year.
 		—SA 2023-09-24
@@ -3007,6 +3007,9 @@ del {
     pointer-events: none;
 }
 
+/* Utility classes: show something only on mobile (`.desktop-not`) or only on desktop (`.mobile-not`): */
+@media all and (min-width: 650px) { .desktop-not { display: none; } }
+@media all and (max-width: 649px) { .mobile-not  { display: none; } }
 
 /*************/
 /* DROP CAPS */
@@ -5223,14 +5226,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1697940768#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1697940768#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5363,7 +5366,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1697940768#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5496,7 +5499,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     background-color: var(--background-color);
     border: var(--GW-popins-popin-border-width) double var(--GW-popins-popin-border-color);
 
-	/*	Having a filter on the popin causes `position:fixed` to not work on 
+	/*	Having a filter on the popin causes `position:fixed` to not work on
 		the popin backdrop (see below). This is not, technically, a ‘bug’:
 		https://stackoverflow.com/questions/52937708/why-does-applying-a-css-filter-on-the-parent-break-the-child-positioning
 		https://github.com/w3c/fxtf-drafts/issues/402
@@ -5818,14 +5821,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1697940768#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1697940768#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6728,7 +6731,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#question');
+    background-image: url('/static/img/icon/icons.svg?v=1697940768#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7294,7 +7297,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1698021605#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1697940768#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7369,7 +7372,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 
 .markdownBody span.block-context-highlighted:empty::before {
 	content: "";
-	background-image: url('/static/img/icon/icons.svg?v=1698021605#hand-point-right-regular');
+	background-image: url('/static/img/icon/icons.svg?v=1697940768#hand-point-right-regular');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
